--- a/renovate.json
+++ b/renovate.json
@@ -38,10 +38,18 @@
                 "image: docker\\.io/(?<depName>[^:]+):(?<currentValue>[^\\s]+)"
             ],
             "datasourceTemplate": "docker",
-            "versioningTemplate": "docker"
+            "versioningTemplate": "docker",
+            "registryUrlTemplate": "https://index.docker.io"
         }
     ],
     "packageRules": [
+        {
+            "matchPackagePatterns": [
+                "^docker\\.io/.+$"
+            ],
+            "groupName": "{{{ replace 'docker.io/' '' packageName }}}",
+            "description": "Group docker.io/* packages with their non-prefixed counterparts"
+        },
         {
             "matchUpdateTypes": [
                 "digest"
