--- a/charts/wordpress/templates/configmap.yaml
+++ b/charts/wordpress/templates/configmap.yaml
@@ -555,9 +555,10 @@ data:
     # Release database lock by deleting the lock row
     # Called automatically via trap on script exit
     # Safe to call even if lock doesn't exist (|| true)
+    # IMPORTANT: Must return 0 to not affect script exit code
     release_lock() {
-      wp db query "DELETE FROM ${TABLE_PREFIX}options WHERE option_name='_helm_init_lock';" >/dev/null 2>&1 || true
-      echo "Database lock released"
+      wp db query "DELETE FROM ${TABLE_PREFIX:-wp_}options WHERE option_name='_helm_init_lock';" >/dev/null 2>&1 || true
+      return 0
     }
   # ============================================================================
   # Library: Composer Functions (lib-composer.sh)
@@ -587,11 +588,13 @@ data:
         cd "${COMPOSER_INSTALL_DIR}" || handle_error "Cannot access Composer install directory"
         
         # Download Composer installer with retry logic
+        echo "  Downloading Composer installer..."
         if ! retry_command php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"; then
           handle_error "Failed to download Composer installer after retries"
         fi
         
         # Download and verify checksum with retry logic
+        echo "  Verifying checksum..."
         if ! EXPECTED_CHECKSUM="$(retry_command php -r 'copy("https://composer.github.io/installer.sig", "php://stdout");')"; then
           rm -f composer-setup.php
           handle_error "Failed to download Composer checksum after retries"
@@ -605,13 +608,14 @@ data:
         fi
         
         # Install Composer to temporary location
+        echo "  Running installer..."
         php composer-setup.php --quiet --install-dir="${COMPOSER_INSTALL_DIR}" --filename=composer 2>&1 | grep -v "PHP version" | grep -v "diagnose" || true
         rm composer-setup.php
         
         # Add to PATH for this session
         export PATH="${COMPOSER_INSTALL_DIR}:$PATH"
         
-        echo "Composer installed successfully: $(composer --version 2>&1 | head -n1)"
+        echo "  Composer installed!"
       fi
     }
     
@@ -896,10 +900,10 @@ data:
     COMPOSERJSON
         echo "composer.json created!"
       else
-        echo "composer.json already exists"
+        [ "${DEBUG}" = "true" ] && echo "DEBUG: composer.json already exists"
         {{- if .Values.wordpress.composer }}
         # Update repositories in existing composer.json
-        echo "Updating custom repositories in composer.json..."
+        [ "${DEBUG}" = "true" ] && echo "DEBUG: Updating custom repositories..."
         
         # Build JSON array of custom repositories
         CUSTOM_REPOS='[{{- range $index, $repo := .Values.wordpress.composer.repositories }}{{- if $index }},{{- end }}{{ $repo | toJson }}{{- end }}]'
@@ -947,7 +951,7 @@ data:
         ')
         
         echo "$TEMP_JSON" > composer.json
-        echo "Custom repositories updated!"
+        [ "${DEBUG}" = "true" ] && echo "DEBUG: Custom repositories updated!"
         {{- end }}
       fi
       
@@ -1055,6 +1059,7 @@ data:
     #   - Composer errors: Exit with detailed message
     
     # Cache all plugin data upfront for performance
+    echo "Caching plugin data..."
     INSTALLED_PLUGINS=$(wp plugin list --field=name 2>/dev/null || echo "")
     ACTIVE_PLUGINS=$(wp plugin list --status=active --field=name 2>/dev/null || echo "")
     AUTOUPDATE_ENABLED=$(wp plugin list --fields=name,auto_update --format=csv 2>/dev/null | grep ",on$" | cut -d',' -f1 || echo "")
@@ -1102,7 +1107,7 @@ data:
     if [ -n "${WORDPRESS_METRICS}" ]; then
       if echo "$INSTALLED_PLUGINS" | grep -q "^${WORDPRESS_METRICS}$"; then
         if ! echo "$ACTIVE_PLUGINS" | grep -q "^${WORDPRESS_METRICS}$"; then
-          run wp plugin activate ${WORDPRESS_METRICS}
+          wp plugin activate ${WORDPRESS_METRICS} 2>/dev/null || true
           ACTIVE_PLUGINS=$(wp plugin list --status=active --field=name 2>/dev/null || echo "")
         fi
       else
@@ -1152,7 +1157,7 @@ data:
     # Handle custom plugins
     {{- if .Values.wordpress.plugins }}
     echo "========================================="
-    echo "Installing custom plugins..."
+    echo "Processing plugins..."
     echo "========================================="
     
     PLUGINS_TO_INSTALL=()
@@ -1175,21 +1180,28 @@ data:
     
     # Check if it's a Composer package
     if is_composer_package "$PLUGIN_NAME"; then
-      echo "Detected Composer package: $PLUGIN_NAME"
+      [ "${DEBUG}" = "true" ] && echo "DEBUG: Detected Composer package: $PLUGIN_NAME"
       COMPOSER_SLUG=$(get_composer_slug "$PLUGIN_NAME")
       
-      # Check if already installed via composer.json
+      # Check if already installed via composer.json AND plugin directory exists
+      # Plugin might be in composer.json but files deleted (e.g., after pruning)
       if [ -f /var/www/html/composer.json ] && grep -q "\"$PLUGIN_NAME\"" /var/www/html/composer.json 2>/dev/null; then
-        echo "Composer package $PLUGIN_NAME already in composer.json"
-        
-        {{- if .autoupdate }}
-        {{- if not .version }}
-        # Auto-update only works for packages without fixed version AND already installed
-        COMPOSER_PLUGINS_TO_UPDATE+=("$PLUGIN_NAME")
-        {{- else }}
-        echo "Note: Auto-update skipped for $PLUGIN_NAME (fixed version specified)"
-        {{- end }}
-        {{- end }}
+        if [ -d "/var/www/html/${WP_PLUGINS_DIR}/${COMPOSER_SLUG}" ]; then
+          [ "${DEBUG}" = "true" ] && echo "DEBUG: Composer package $PLUGIN_NAME already installed"
+          
+          {{- if .autoupdate }}
+          {{- if not .version }}
+          # Auto-update only works for packages without fixed version AND already installed
+          COMPOSER_PLUGINS_TO_UPDATE+=("$PLUGIN_NAME")
+          {{- else }}
+          echo "Note: Auto-update skipped for $PLUGIN_NAME (fixed version specified)"
+          {{- end }}
+          {{- end }}
+        else
+          # Package in composer.json but files missing - need to run composer install
+          echo "Composer package $PLUGIN_NAME in composer.json but plugin directory missing - will reinstall"
+          COMPOSER_PACKAGES_MODIFIED=true
+        fi
       else
         {{- if .version }}
         COMPOSER_PLUGINS_TO_INSTALL+=("{{ .name | lower }}:{{ .version }}")
@@ -1279,7 +1291,7 @@ data:
     
     # Update Composer plugins (auto-update for packages without fixed version)
     if [ ${#COMPOSER_PLUGINS_TO_UPDATE[@]} -gt 0 ]; then
-      echo "Checking for Composer plugin updates..."
+      [ "${DEBUG}" = "true" ] && echo "DEBUG: Checking for Composer plugin updates..."
       cd /var/www/html || handle_error "Failed to change to /var/www/html directory"
       
       # Get list of outdated packages once (performance optimization)
@@ -1311,8 +1323,6 @@ data:
       if [ $PLUGINS_UPDATED -gt 0 ]; then
         echo "$PLUGINS_UPDATED Composer plugin(s) updated!"
         COMPOSER_PACKAGES_MODIFIED=true
-      else
-        echo "All Composer plugins are already up to date."
       fi
     fi
 
@@ -1329,7 +1339,7 @@ data:
       
       if [ ${#PLUGINS_NEED_ACTIVATION[@]} -gt 0 ]; then
         echo "Activating ${#PLUGINS_NEED_ACTIVATION[@]} plugin(s)..."
-        run wp plugin activate "${PLUGINS_NEED_ACTIVATION[@]}"
+        wp plugin activate "${PLUGINS_NEED_ACTIVATION[@]}" 2>/dev/null || echo "Warning: Some plugins could not be activated"
         ACTIVE_PLUGINS=$(wp plugin list --status=active --field=name 2>/dev/null || echo "")
       fi
     fi
@@ -1371,8 +1381,6 @@ data:
         run wp plugin auto-updates enable "${PLUGINS_NEED_AUTOUPDATE[@]}"
       fi
     fi
-    {{- else }}
-    echo "No custom plugins specified."
     {{- end }}
 
     {{- if .Values.wordpress.pluginsPrune }}
@@ -1381,24 +1389,26 @@ data:
     # ============================================================================
     
     # Build comma-separated list of plugins to exclude from deletion
+    # Includes both regular plugins and slugs extracted from Composer packages
     EXCLUDE_PLUGINS=""
     COMPOSER_PACKAGES_TO_KEEP=()
     COMPOSER_THEME_PACKAGES_TO_KEEP=()
+    {{- $excludeList := list }}
     {{- if .Values.wordpress.plugins }}
-    {{- range $index, $plugin := .Values.wordpress.plugins }}
+    {{- range $plugin := .Values.wordpress.plugins }}
     {{- $name := $plugin.name | lower }}
     {{- if and (contains "/" $name) (not (hasPrefix "http://" $name)) (not (hasPrefix "https://" $name)) }}
-    # Composer package: {{ $name }}
+    # Composer package: {{ $name }} -> slug: {{ $name | splitList "/" | last }}
     COMPOSER_PACKAGES_TO_KEEP+=("{{ $name }}")
+    {{- $excludeList = append $excludeList ($name | splitList "/" | last) }}
     {{- else }}
     # Regular plugin: {{ $name }}
-    {{- if eq $index 0 }}
-    EXCLUDE_PLUGINS="{{ $name }}"
-    {{- else }}
-    EXCLUDE_PLUGINS="${EXCLUDE_PLUGINS},{{ $name }}"
+    {{- $excludeList = append $excludeList $name }}
     {{- end }}
     {{- end }}
     {{- end }}
+    {{- if $excludeList }}
+    EXCLUDE_PLUGINS="{{ $excludeList | join "," }}"
     {{- end }}
     {{- if .Values.wordpress.themes }}
     {{- range .Values.wordpress.themes }}
@@ -1420,14 +1430,22 @@ data:
     {{- end }}
     
     # Delete all plugins except those in the exclude list
+    # Only show output if plugins are actually deleted
     if [ -n "$EXCLUDE_PLUGINS" ]; then
-      echo "Pruning plugins not in the defined list..."
-      echo "Keeping plugins: $EXCLUDE_PLUGINS"
-      run wp plugin delete --all --exclude="$EXCLUDE_PLUGINS"
+      [ "${DEBUG}" = "true" ] && echo "DEBUG: Keeping plugins: $EXCLUDE_PLUGINS"
+      PLUGINS_BEFORE=$(wp plugin list --field=name 2>/dev/null | wc -l || echo "0")
+      wp plugin delete --all --exclude="$EXCLUDE_PLUGINS" >/dev/null 2>&1 || true
+      PLUGINS_AFTER=$(wp plugin list --field=name 2>/dev/null | wc -l || echo "0")
+      PRUNED_COUNT=$((PLUGINS_BEFORE - PLUGINS_AFTER))
+      if [ "$PRUNED_COUNT" -gt 0 ]; then
+        echo "Pruned $PRUNED_COUNT plugin(s)"
+      fi
     else
-      echo "Pruning plugins not in the defined list..."
-      echo "Deleting all plugins..."
-      run wp plugin delete --all
+      PLUGINS_COUNT=$(wp plugin list --field=name 2>/dev/null | wc -l || echo "0")
+      if [ "$PLUGINS_COUNT" -gt 0 ]; then
+        echo "Pruning all $PLUGINS_COUNT plugin(s)..."
+        wp plugin delete --all >/dev/null 2>&1 || true
+      fi
     fi
     {{- end }}
     
@@ -1453,7 +1471,7 @@ data:
     #   - Composer errors: Exit with detailed message
     # 
     echo "========================================="
-    echo "Installing custom themes..."
+    echo "Processing themes..."
     echo "========================================="
     
     # Cache all theme data upfront
@@ -1501,21 +1519,28 @@ data:
     
     # Check if it's a Composer package
     if is_composer_package "$THEME_NAME"; then
-      echo "Detected Composer theme package: $THEME_NAME"
+      [ "${DEBUG}" = "true" ] && echo "DEBUG: Detected Composer theme package: $THEME_NAME"
       COMPOSER_THEME_SLUG=$(get_composer_slug "$THEME_NAME")
       
-      # Check if already installed via composer.json
+      # Check if already installed via composer.json AND theme directory exists
+      # Theme might be in composer.json but files deleted (e.g., after pruning)
       if [ -f /var/www/html/composer.json ] && grep -q "\"$THEME_NAME\"" /var/www/html/composer.json 2>/dev/null; then
-        echo "Composer theme package $THEME_NAME already in composer.json"
-        
-        {{- if .autoupdate }}
-        {{- if not .version }}
-        # Auto-update only works for packages without fixed version AND already installed
-        COMPOSER_THEMES_TO_UPDATE+=("$THEME_NAME")
-        {{- else }}
-        echo "Note: Auto-update skipped for theme $THEME_NAME (fixed version specified)"
-        {{- end }}
-        {{- end }}
+        if [ -d "/var/www/html/${WP_THEMES_DIR}/${COMPOSER_THEME_SLUG}" ]; then
+          [ "${DEBUG}" = "true" ] && echo "DEBUG: Composer theme package $THEME_NAME already installed"
+          
+          {{- if .autoupdate }}
+          {{- if not .version }}
+          # Auto-update only works for packages without fixed version AND already installed
+          COMPOSER_THEMES_TO_UPDATE+=("$THEME_NAME")
+          {{- else }}
+          echo "Note: Auto-update skipped for theme $THEME_NAME (fixed version specified)"
+          {{- end }}
+          {{- end }}
+        else
+          # Package in composer.json but files missing - need to run composer install
+          echo "Composer theme package $THEME_NAME in composer.json but theme directory missing - will reinstall"
+          COMPOSER_PACKAGES_MODIFIED=true
+        fi
       else
         {{- if .version }}
         COMPOSER_THEMES_TO_INSTALL+=("{{ .name | lower }}:{{ .version }}")
@@ -1606,7 +1631,7 @@ data:
     
     # Update Composer themes (auto-update for packages without fixed version)
     if [ ${#COMPOSER_THEMES_TO_UPDATE[@]} -gt 0 ]; then
-      echo "Checking for Composer theme updates..."
+      [ "${DEBUG}" = "true" ] && echo "DEBUG: Checking for Composer theme updates..."
       cd /var/www/html || handle_error "Failed to change to /var/www/html directory"
       
       # Get list of outdated packages once (performance optimization)
@@ -1641,8 +1666,6 @@ data:
       if [ $THEMES_UPDATED -gt 0 ]; then
         echo "$THEMES_UPDATED Composer theme(s) updated!"
         COMPOSER_PACKAGES_MODIFIED=true
-      else
-        echo "All Composer themes are already up to date."
       fi
     fi
 
@@ -1763,10 +1786,8 @@ data:
     
     # Delete all themes in one command for better performance
     if [ ${#THEMES_TO_DELETE[@]} -gt 0 ]; then
-      echo "Pruning themes not in the defined list..."
-      echo "Keeping active theme: $ACTIVE_THEME"
-      echo "Removing ${#THEMES_TO_DELETE[@]} theme(s): ${THEMES_TO_DELETE[*]}"
-      run wp theme delete "${THEMES_TO_DELETE[@]}"
+      echo "Pruning ${#THEMES_TO_DELETE[@]} theme(s): ${THEMES_TO_DELETE[*]}"
+      wp theme delete "${THEMES_TO_DELETE[@]}" 2>/dev/null || true
     fi
     
     # Remove Composer packages (plugins & themes) not in the keep lists
@@ -2017,7 +2038,7 @@ data:
       echo "Composer autoloader MU-Plugin created!"
       
       # Activate Composer plugins that couldn't be activated before (they didn't exist yet)
-      if [ ${#COMPOSER_PLUGINS_PENDING_ACTIVATION[@]:-0} -gt 0 ]; then
+      if [ ${#COMPOSER_PLUGINS_PENDING_ACTIVATION[@]} -gt 0 ]; then
         echo "Activating Composer plugins after composer install..."
         # Refresh active plugins list
         ACTIVE_PLUGINS=$(wp plugin list --status=active --field=name 2>/dev/null || echo "")
@@ -2033,8 +2054,6 @@ data:
         fi
       fi
     fi
-
-    echo "WordPress initialization completed!"
     
     # ============================================================================
     # Custom Init Commands
@@ -2042,17 +2061,13 @@ data:
     {{- if .Values.wordpress.init.customInitConfigMap.name }}
     
     echo "Running custom init commands from ConfigMap..."
-    echo "========================================="
     if [ -f /tmp/custom-init-commands/{{ .Values.wordpress.init.customInitConfigMap.key | default "commands.sh" }} ]; then
       # Execute the custom commands script (already executable via defaultMode: 0755)
       /tmp/custom-init-commands/{{ .Values.wordpress.init.customInitConfigMap.key | default "commands.sh" }}
-      echo "========================================="
       echo "Custom init commands completed!"
     else
       echo "Warning: Custom commands file not found in ConfigMap"
     fi
-    {{- else }}
-    echo "No custom init commands configured."
     {{- end }}
     
     # ============================================================================
@@ -2063,4 +2078,8 @@ data:
     test_summary
     
     # Lock will be released automatically via trap on EXIT
-    echo "Init script completed!"
+    echo "Database lock released."
+    echo "Init script completed successfully!"
+    
+    # Explicitly exit with success code
+    exit 0
