--- a/charts/wordpress/samples/advanced.values.yaml
+++ b/charts/wordpress/samples/advanced.values.yaml
@@ -43,10 +43,10 @@ wordpress:
       lastname: "Smith"
       role: "contributor"
       sendEmail: false
-  # configExtraSecret:
-  #   name: "wordpress-test-secret"
+  configExtraSecret:
+    name: "wordpress-test-secret"
   htaccessConfigMap: "wordpress-custom-config"
-  url: "http://192.168.178.31:30111"
+  url: "https//example.com"
 service:
   nodePorts:
     http: 30111
