added: validate-artifacthub-annotations: introduced validation for Chart.yaml annotations

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,15 @@ repos:
     rev: v0.1.23
     hooks:
       - id: helmlint
+
+  # Validate ArtifactHub annotations in Chart.yaml files
+  # Catches: invalid YAML in annotations, wrong 'kind' values, missing required fields,
+  # and special characters that need quotes: {}:[],&*#?|-<>=!%@
+  - repo: local
+    hooks:
+      - id: validate-artifacthub-annotations
+        name: Validate ArtifactHub annotations
+        entry: python scripts/validate-artifacthub-annotations.py
+        language: python
+        files: Chart\.yaml$
+        additional_dependencies: [pyyaml]
