--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 0.8.0-rc.1
+version: 0.8.0-rc.2
 appVersion: "6.8.3"
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
@@ -55,7 +55,9 @@ annotations:
     - kind: deprecated
       description: "Traditional Helm Repository is deprecated, only OCI-based Helm charts are supported."
     - kind: added
-      description: "Added .image.registry in values.yaml"
+      description: "Registry value added. Added functionality to _helpers.tpl to support it."
+    - kind: changed
+      description: "Better comments for documentation in values.yaml."
   artifacthub.io/images: |
     - name: wordpress
       image: docker.io/wordpress:6.8.3-php8.1-apache
