--- a/charts/wordpress/samples/composer.values.yaml
+++ b/charts/wordpress/samples/composer.values.yaml
@@ -67,6 +67,10 @@ wordpress:
 
   pluginsPrune: true
   themesPrune: true
+
+service:
+  nodePorts:
+    http: 30111
 # Database configuration
 mariadb:
   enabled: true
