--- a/charts/wordpress/samples/advanced.values.yaml
+++ b/charts/wordpress/samples/advanced.values.yaml
@@ -46,7 +46,7 @@ wordpress:
   configExtraSecret:
     name: "wordpress-test-secret"
   htaccessConfigMap: "wordpress-custom-config"
-  url: "https//example.com"
+  url: "https://example.com"
 service:
   nodePorts:
     http: 30111
