WordPress 1.0.0, wg-easy 0.3.0, wireguard 0.3.0 (#89)
* wordpress 0.8.0-beta1

* fix: correct indentation in artifacthub.io/changes annotation for wordpress 0.8.0-beta1

* beta2

* beta3

* beta4

* beta5

* beta6

* beta7

* beta8

* beta9

* beta10

* beta.10

* wordpress 0.8.0-rc.1

* wordpress 0.8.0-rc.1

* changed: wordpress: updated configExtraSecret and fixed URL format
removed: wordpress: removed service nodePorts configuration
changed: oci-release: added branch-based release policy with force flag handling

* changed: release: updated workflow to clarify deprecation and improve asset handling

* changed: renovate: improved comment handling in workflow
added: vscode: added pre-commit task to tasks.json

* added: validate-artifacthub-annotations: introduced validation for Chart.yaml annotations

* wordpress 0.8.0-rc.2

* wg-easy 0.3.0

* wordpress 0.8.0-rc.3

* wireguard 0.3.0

* wordpress 0.8.0

* wordpress 0.8.0 preps

* wordpress 1.0.0

* charts/wireguard chore(deps): updates (#78)

* charts/wireguard chore(deps): updates (#80)

* changed: update-chart-metadata - enhanced version bump logic for dependencies
changed: renovate - added labels for version types in PRs

* added: tasks for upgrading test chart in helm

* removed: obsolete regex manager for values.yaml files in renovate configuration

* added: group docker.io packages without prefix in renovate configuration

* removed: obsolete grouping for docker.io packages in renovate configuration
changed: updated regex for image matching in Chart.yaml files

* feat(wordpress): add core version check and disable auto-updates

* feat: WordPress minor updates trigger major chart bump

* changed: update-chart-metadata - enhanced version bump logic for dependencies
changed: renovate - added labels for version types in PRs

* cleared image registry names in value.yaml to allow better update handling by Renovate

* added: group docker.io packages without prefix in renovate configuration

* removed: obsolete groupi

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -47,6 +47,23 @@
                 "Install test chart"
             ],
             "problemMatcher": []
+        },
+        {
+            "label": "Run pre-commit",
+            "type": "shell",
+            "command": "pre-commit run --all-files",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [],
+            "group": {
+                "kind": "test",
+                "isDefault": false
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared"
+            }
         }
     ],
     "inputs": [
