--- a/charts/wordpress/samples/muPlugins.values.yaml
+++ b/charts/wordpress/samples/muPlugins.values.yaml
@@ -20,9 +20,11 @@ wordpress:
     # Copy only a specific key from a ConfigMap
     - name: wordpress-mu-plugins-extra
       key: custom-analytics.php
-    # Or copy all files from another ConfigMap:
-    # - name: wordpress-mu-plugins-extra
-
+      # Or copy all files from another ConfigMap:
+      # - name: wordpress-mu-plugins-extra
+service:
+  nodePorts:
+    http: 30111
 # Database configuration (example with MariaDB)
 mariadb:
   enabled: true
