--- a/charts/wordpress/samples/advanced.values.yaml
+++ b/charts/wordpress/samples/advanced.values.yaml
@@ -59,6 +59,9 @@ metrics:
     enabled: true
     serviceMonitor:
       existingSecret: "wordpress-test-secret"
+    grafanaDashboard:
+      enabled: true
+      namespace: "monitoring"
   apache:
     enabled: true
 mariadb:
