changed: wg-easy: updated appVersion annotation for renovate image tracking added: renovate: custom regex manager for Chart.yaml version extraction

--- a/renovate.json
+++ b/renovate.json
@@ -32,6 +32,18 @@
         {
             "customType": "regex",
             "fileMatch": [
+                "^charts/(?!wireguard/).*/Chart\\.yaml$"
+            ],
+            "matchStrings": [
+                "appVersion:\\s+['\"]?(?<currentValue>[^'\"\\s]+)['\"]?(?:\\s*#\\s*renovate:\\s*image=(?<depName>[^\\s]+))?"
+            ],
+            "datasourceTemplate": "docker",
+            "depNameTemplate": "docker.io/{{replace \"charts/\" \"\" packageFileDir}}",
+            "versioningTemplate": "semver"
+        },
+        {
+            "customType": "regex",
+            "fileMatch": [
                 "^charts/.*/Chart\\.yaml$"
             ],
             "matchStrings": [
