changed: wireguard: updated appVersion annotation for renovate image tracking changed: wordpress: updated appVersion annotation for renovate image tracking changed: renovate: improved regex for appVersion and image matching

--- a/charts/wireguard/Chart.yaml
+++ b/charts/wireguard/Chart.yaml
@@ -3,7 +3,7 @@ name: wireguard
 description: "Using the offical linuxserver/wireguard image with almost any environment variables for K8S. Supporting server and client mode."
 type: application
 version: 0.3.1
-appVersion: 1.0.20250521-r0-ls93
+appVersion: 1.0.20250521-r0-ls93 # renovate: image=linuxserver/wireguard
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wireguard/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
